--- a/hw_1/lab2.ipynb
+++ b/hw_1/lab2.ipynb
@@ -850,7 +850,8 @@
     "        \n",
     "        ansver = np.append(ansver, ans_k) \n",
     "    \n",
-    "    return ansver"
+    "    return ansver\n",
+    "\n"
    ]
   },
   {
@@ -1248,7 +1249,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
