--- a/hw_4/asr_lab_2.ipynb
+++ b/hw_4/asr_lab_2.ipynb
@@ -923,11 +923,11 @@
         "\n",
         "for phone in phones_dict.keys():\n",
         "    if phones_dict[phone]:\n",
-        "        gmm_phone_model_value[phone] = GaussianMixture(n_components=3, random_state=1337).fit(phones_dict[phone])\n",
+        "        gmm_phone_model_value[phone] = GaussianMixture(n_components=3,covariance_type='diag', random_state=1337).fit(phones_dict[phone])\n",
         "\n",
         "\n"
       ],
-      "execution_count": 109,
+      "execution_count": 122,
       "outputs": []
     },
     {
@@ -1523,16 +1523,16 @@
         "graph = load_graph(lexicon_dict, gmm_phone_model_value, 'gmm')\n",
         "records_data_dict = load_data_dict(\"data/yes_no/records\")\n",
         "\n",
-        "run_recognizer(records_data_dict, graph, beam_threshold=60)"
+        "run_recognizer(records_data_dict, graph, beam_threshold=10)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "RV6niMtZ3yNF",
-        "outputId": "a83b02e5-7faf-4719-e87d-db2cf073727d"
+        "outputId": "ea675256-3b81-4b90-daca-50d4e443e277"
       },
-      "execution_count": 115,
+      "execution_count": 128,
       "outputs": [
         {
           "output_type": "stream",
@@ -1550,7 +1550,7 @@
             "result: no_4abb2400_nohash_0.wav    ==> NO\n",
             "------------------------------------------------------------\n",
             "WER is: 0.00%\n",
-            "Total time is: 3.47 sec\n",
+            "Total time is: 1.65 sec\n",
             "------------------------------------------------------------\n"
           ]
         }
@@ -1559,7 +1559,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Уже при `beam_threshold = 60` достигается полное распознавание, что конечно гораздо лучше чем в прошлой лабе."
+        "Уже при `beam_threshold = 10` достигается полное распознавание, что конечно гораздо лучше чем в прошлой лабе."
       ],
       "metadata": {
         "id": "EQxVJmYI7xtE"
@@ -1582,16 +1582,16 @@
         "graph = load_graph(lexicon_dict, gmm_phone_model_value, 'gmm')\n",
         "records_data_dict = load_data_dict(\"data/digits/records\")\n",
         "\n",
-        "run_recognizer(records_data_dict, graph, beam_threshold=60)"
+        "run_recognizer(records_data_dict, graph, beam_threshold=800)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "7ley5r918CXA",
-        "outputId": "d54fda2a-4072-48a0-eb21-74828ec8bda9"
+        "outputId": "d008e886-4e74-4a5d-ce43-d3d9733b5cdc"
       },
-      "execution_count": 120,
+      "execution_count": 134,
       "outputs": [
         {
           "output_type": "stream",
@@ -1599,27 +1599,27 @@
           "text": [
             "result: nine_ccea893d_nohash_0.wav  ==> NINE\n",
             "result: six_ffd2ba2f_nohash_0.wav   ==> SIX\n",
-            "result: one_ffa76c4a_nohash_0.wav   ==> FOUR\n",
+            "result: one_ffa76c4a_nohash_0.wav   ==> ONE\n",
             "result: five_f852895b_nohash_0.wav  ==> FIVE\n",
             "result: eight_da584bc0_nohash_4.wav ==> SIX\n",
-            "result: zero_f852895b_nohash_0.wav  ==> SEVEN\n",
-            "result: five_ffd2ba2f_nohash_0.wav  ==> FIVE\n",
+            "result: zero_f852895b_nohash_0.wav  ==> ZERO\n",
+            "result: five_ffd2ba2f_nohash_0.wav  ==> ONE\n",
             "result: one_fc2411fe_nohash_0.wav   ==> ONE\n",
             "result: nine_fbe51750_nohash_0.wav  ==> NINE\n",
             "result: six_ffbb695d_nohash_0.wav   ==> SIX\n",
-            "result: two_fce65496_nohash_0.wav   ==> FIVE\n",
-            "result: zero_f92e49f3_nohash_3.wav  ==> SIX\n",
+            "result: two_fce65496_nohash_0.wav   ==> NINE\n",
+            "result: zero_f92e49f3_nohash_3.wav  ==> ZERO\n",
             "result: seven_fe5c4a7a_nohash_0.wav ==> SEVEN\n",
             "result: four_fce65496_nohash_0.wav  ==> FOUR\n",
             "result: eight_daf230ac_nohash_0.wav ==> EIGHT\n",
-            "result: three_fce96bac_nohash_0.wav ==> SEVEN\n",
-            "result: two_fb2f3242_nohash_0.wav   ==> TWO\n",
-            "result: three_feb1d305_nohash_0.wav ==> SIX\n",
+            "result: three_fce96bac_nohash_0.wav ==> TWO\n",
+            "result: two_fb2f3242_nohash_0.wav   ==> ZERO\n",
+            "result: three_feb1d305_nohash_0.wav ==> THREE\n",
             "result: four_ffbb695d_nohash_0.wav  ==> FOUR\n",
             "result: seven_fd32732a_nohash_0.wav ==> SIX\n",
             "------------------------------------------------------------\n",
-            "WER is: 40.00%\n",
-            "Total time is: 25.98 sec\n",
+            "WER is: 30.00%\n",
+            "Total time is: 33.54 sec\n",
             "------------------------------------------------------------\n"
           ]
         }
